flattened html/pdf/txt - work in progress

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,43 +1,38 @@
 all: css userguide changelog pdf utlist utstring utarray
 
-userguide:	txt/userguide.txt
-	asciidoc --unsafe --out-file=html/userguide.html -a linkcss=1 -a theme=tdh $<
+userguide:	userguide.txt
+	asciidoc --unsafe --out-file=userguide.html $<
 
-utlist: txt/utlist.txt
-	asciidoc --unsafe --out-file=html/utlist.html -a linkcss=1 -a theme=tdh $<
+utlist: utlist.txt
+	asciidoc --unsafe --out-file=utlist.html $<
 
-utarray: txt/utarray.txt
-	asciidoc --unsafe --out-file=html/utarray.html -a linkcss=1 -a theme=tdh $<
+utarray: utarray.txt
+	asciidoc --unsafe --out-file=utarray.html $<
 
-utstring: txt/utstring.txt
-	asciidoc --unsafe --out-file=html/utstring.html -a linkcss=1 -a theme=tdh $<
+utstring: utstring.txt
+	asciidoc --unsafe --out-file=utstring.html $<
 
-changelog:	txt/ChangeLog.txt
-	asciidoc --out-file=html/ChangeLog.html txt/ChangeLog.txt 
+changelog:	ChangeLog.txt
+	asciidoc --out-file=ChangeLog.html ChangeLog.txt 
 
+TMP=/tmp/uthash-gh-pages
 stage:
-	cp html/userguide.html ${PAGEROOT}/uthash
-	cp html/userguide.pdf ${PAGEROOT}/uthash
-	cp html/utlist.html ${PAGEROOT}/uthash
-	cp html/utarray.html ${PAGEROOT}/uthash
-	cp html/utstring.html ${PAGEROOT}/uthash
-	cp html/ChangeLog.html ${PAGEROOT}/uthash
-	cp html/license.html ${PAGEROOT}/uthash
-	cp html/index.html ${PAGEROOT}/uthash
-	cp html/styles.css ${PAGEROOT}/uthash
+	mkdir -p ${TMP}
+	cp userguide.html ${TMP}/uthash
+	cp userguide.pdf ${TMP}/uthash
+	cp utlist.html ${TMP}/uthash
+	cp utarray.html ${TMP}/uthash
+	cp utstring.html ${TMP}/uthash
+	cp ChangeLog.html ${TMP}/uthash
+	cp license.html ${TMP}/uthash
+	cp index.html ${TMP}/uthash
+	cp styles.css ${TMP}/uthash
 
 .PHONY: pdf
 
-pdf: txt/userguide.txt
+pdf: userguide.txt
 	a2x --format=pdf $<
-	mv txt/userguide.pdf pdf/
-	cd html && ln -sf ../pdf/userguide.pdf userguide.pdf
-	rm -f txt/userguide.xml
 
-css: html/toc.css
-	if [ ! -d ~/.asciidoc/themes/tdh ]; then mkdir -p ~/.asciidoc/themes/tdh; fi
-	cp html/toc.css ~/.asciidoc/themes/tdh
-
-docbook: txt/userguide.txt
+docbook: userguide.txt
 	asciidoc -b docbook --out-file=/tmp/userguide.xml $<
 	xmlto -o html html-nochunks /tmp/userguide.xml 
