--- a/doc/Makefile
+++ b/doc/Makefile
@@ -10,7 +10,7 @@ $(HTML): %.html: %.txt
 TMP=/tmp/uthash-gh-pages
 stage:
 	mkdir -p ${TMP}
-	rm -i ${TMP}/*
+	rm -if ${TMP}/*
 	cp *.html *.css *.png ${TMP}
 
 
