--- a/opt/bundle/tests/Makefile
+++ b/opt/bundle/tests/Makefile
@@ -1,4 +1,5 @@
-PROGS=test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11
+PROGS=test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 test12 \
+      test13 test14 test15
 OBJS=$(patsubst %,%.o,$(PROGS))
 
 CFLAGS = -I../include -L../src
