Fix -Wextra Warnings
Cast size_t to long in long-size_t comparisons

--- a/opt/bundle/src/Makefile
+++ b/opt/bundle/src/Makefile
@@ -2,7 +2,7 @@ OBJS=libut.a
 all: $(OBJS) 
 INCDIR=../include
 CFLAGS=-I$(INCDIR)
-CFLAGS+=-Wall
+CFLAGS+=-Wall -Wextra
 CFLAGS+=-g
 
 libut.a: libut.o utvector.o 
