--- a/opt/bundle/src/Makefile
+++ b/opt/bundle/src/Makefile
@@ -5,13 +5,16 @@ CFLAGS=-I$(INCDIR)
 CFLAGS+=-Wall -Wextra
 CFLAGS+=-g
 
-libut.a: libut.o utvector.o 
+libut.a: libut.o utvector.o utmm.o
 	ar r $@ $^
 
 libut.o: libut.c $(INCDIR)/libut.h
 	$(CC) $(CFLAGS) -c $<
 
 utvector.o: utvector.c $(INCDIR)/utvector.h
+	$(CC) $(CFLAGS) -c $<
+
+utmm.o: utmm.c $(INCDIR)/utmm.h
 	$(CC) $(CFLAGS) -c $<
 
 .PHONY: clean 
