--- a/libut/tests/Makefile
+++ b/libut/tests/Makefile
@@ -2,7 +2,7 @@ PROGS=test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 test12
       test13 test14 test15 test16
 OBJS=$(patsubst %,%.o,$(PROGS))
 
-CFLAGS = -I../include
+CFLAGS = -I../../include
 CFLAGS += -g
 CFLAGS += -Wall -Wextra
 LDFLAGS=-L.. -lut 
