Replace '/bin/sh' with '/bin/bash'
Some of the scripts use extensions that are specific to bash so replace
'/bin/sh' with '/bin/bash' to avoid bashism warnings.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -102,7 +102,7 @@ run_tests: $(PROGS)
 	perl $(TESTS)
 
 run_tests_mingw: $(PROGS)
-	/bin/sh do_tests.mingw
+	/bin/bash do_tests.mingw
 
 astyle:
 	astyle -n --style=kr --indent-switches --add-brackets *.c
