--- a/libut/Makefile
+++ b/libut/Makefile
@@ -5,7 +5,7 @@ CFLAGS=-I$(INCDIR)
 CFLAGS+=-Wall -Wextra
 CFLAGS+=-g
 
-libut.a: libut.o utvector.o utmm.o
+libut.a: libut.o utvector.o utmm.o ringbuf.o
 	ar r $@ $^
 
 libut.o: src/libut.c $(INCDIR)/libut.h
@@ -15,6 +15,9 @@ utvector.o: src/utvector.c $(INCDIR)/utvector.h
 	$(CC) $(CFLAGS) -c $<
 
 utmm.o: src/utmm.c $(INCDIR)/utmm.h
+	$(CC) $(CFLAGS) -c $<
+
+ringbuf.o: src/ringbuf.c $(INCDIR)/ringbuf.h
 	$(CC) $(CFLAGS) -c $<
 
 .PHONY: clean tests install
