Better to have no separate target for generation of .gitignore. Check of .gitignore existence and generation of it is always done ad-hoc now.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -71,8 +71,8 @@ all: $(PROGS) $(UTILS) $(PLAT_UTILS) $(FUNCS) $(SPECIAL_FUNCS) $(TEST_TARGET)
 
 tests_only: $(PROGS) $(TEST_TARGET)
 
-.gitignore:
-	[ -f "$@" ] || echo "$@" > $@
+GITIGN = .gitignore
+MKGITIGN = [ -f "$(GITIGN)" ] || echo "$(GITIGN)" > $(GITIGN); grep -q '^\$@$$' $(GITIGN) || echo "$@" >> $(GITIGN)
 
 debug:
 	$(MAKE) all HASH_DEBUG=1
@@ -86,17 +86,17 @@ cplusplus:
 example: example.c $(HASHDIR)/uthash.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) -o $@ $(@).c
 
-$(PROGS) $(UTILS) : $(HASHDIR)/uthash.h .gitignore
+$(PROGS) $(UTILS) : $(HASHDIR)/uthash.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) -o $@ $(@).c
-	@grep -q '^\$@$$' .gitignore || echo "$@" >> .gitignore
+	@$(MKGITIGN)
 
 hashscan : $(HASHDIR)/uthash.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) $(MUR_CFLAGS) $(LDFLAGS) -o $@ $(@).c
-	@grep -q '^\$@$$' .gitignore || echo "$@" >> .gitignore
+	@$(MKGITIGN)
 
 sleep_test : $(HASHDIR)/uthash.h 
 	$(CC) $(CPPFLAGS) $(CFLAGS) -DHASH_BLOOM=16 $(LDFLAGS) -o $@ $(@).c
-	@grep -q '^\$@$$' .gitignore || echo "$@" >> .gitignore
+	@$(MKGITIGN)
 
 $(FUNCS) : $(HASHDIR)/uthash.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) -DHASH_FUNCTION=HASH_$@ \
@@ -117,8 +117,6 @@ astyle:
 
 .PHONY: clean astyle
 
-.INTERMEDIATE: .gitignore
-
 clean:	
-	rm -f $(UTILS) $(PLAT_UTILS) $(PROGS) test*.out keystat.??? example *.exe .gitignore
+	rm -f $(UTILS) $(PLAT_UTILS) $(PROGS) test*.out keystat.??? example *.exe $(GITIGN)
 	rm -rf *.dSYM
