Squashed commit of the following:
commit 9383adf370df9408a2244c53f6ba08b22e995895
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Tue Jun 28 00:45:11 2016 +0200

    Incorporate Arthur O'Dwyer's suggestions

commit 1494286e16f72b4fa61c4f8195235d038495b3bb
Merge: fa99052 6130b77
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Mon Jun 27 23:51:46 2016 +0200

    Merge branch 'master' of https://github.com/troydhanson/uthash

    Conflicts:
    	doc/userguide.txt
    	src/uthash.h

commit fa99052d768c0aee2dc2c069eefc507eec85f305
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Fri Jun 17 14:32:29 2016 +0200

    Better to have no separate target for generation of .gitignore. Check of .gitignore existence and generation of it is always done ad-hoc now.

commit 5cf17157c74fe8648ada71eb15ccd17e7beedf1e
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Tue Jun 14 22:39:51 2016 +0200

    Uh... just a typo fixed.

commit b0b67951b5460c3af6f366d39a67a5807bc031b5
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Tue Jun 14 22:28:52 2016 +0200

    Add .gitignore and autogenerate .gitignore in tests/ directory so as to prevent tests from clogging git output

commit e9ec721a19e3c3388b72839d5183166eb0e2aefe
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Tue Jun 14 22:28:23 2016 +0200

    Shut up a few unused function compiler warnings

commit 682a45a230ea9a40f6e7c808908f68a2bcc575cc
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Tue Jun 14 22:08:26 2016 +0200

    Update userguide with HASH_SADD*() macro family

commit 9809d8901db6a7be4308887e57ff630e992fc220
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Tue Jun 14 16:54:19 2016 +0200

    This way round is ANSI-C

commit 5eec55af912aaca665062c493dccf4e0468a3449
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Tue Jun 14 16:47:22 2016 +0200

    Make sure we conform to ANSI C in variable declaration

commit cdaa14cc6e3dd6e21cdf61736db37f868e7ce343
Author: Thilo Schulz <thilo@tjps.eu>
Date:   Tue Jun 14 16:36:48 2016 +0200

    Add test case for SADD* macro

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -13,7 +13,7 @@ PROGS = test1 test2 test3 test4 test5 test6 test7 test8 test9   \
         test58 test59 test60 test61 test62 test63 test64 test65 \
         test66 test67 test68 test69 test70 test71 test72 test73 \
         test74 test75 test76 test77 test78 test79 test80 test81 \
-        test82 test83 test84 test85 test86
+        test82 test83 test84 test85 test86 test87
 CFLAGS += -I$(HASHDIR)
 #CFLAGS += -DHASH_BLOOM=16
 #CFLAGS += -O2
@@ -71,6 +71,9 @@ all: $(PROGS) $(UTILS) $(PLAT_UTILS) $(FUNCS) $(SPECIAL_FUNCS) $(TEST_TARGET)
 
 tests_only: $(PROGS) $(TEST_TARGET)
 
+GITIGN = .gitignore
+MKGITIGN = [ -f "$(GITIGN)" ] || echo "$(GITIGN)" > $(GITIGN); grep -q '^\$@$$' $(GITIGN) || echo "$@" >> $(GITIGN)
+
 debug:
 	$(MAKE) all HASH_DEBUG=1
 
@@ -85,12 +88,15 @@ example: example.c $(HASHDIR)/uthash.h
 
 $(PROGS) $(UTILS) : $(HASHDIR)/uthash.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) -o $@ $(@).c
+	@$(MKGITIGN)
 
 hashscan : $(HASHDIR)/uthash.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) $(MUR_CFLAGS) $(LDFLAGS) -o $@ $(@).c
+	@$(MKGITIGN)
 
 sleep_test : $(HASHDIR)/uthash.h 
 	$(CC) $(CPPFLAGS) $(CFLAGS) -DHASH_BLOOM=16 $(LDFLAGS) -o $@ $(@).c
+	@$(MKGITIGN)
 
 $(FUNCS) : $(HASHDIR)/uthash.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) -DHASH_FUNCTION=HASH_$@ \
@@ -112,5 +118,5 @@ astyle:
 .PHONY: clean astyle
 
 clean:	
-	rm -f $(UTILS) $(PLAT_UTILS) $(PROGS) test*.out keystat.??? example *.exe
+	rm -f $(UTILS) $(PLAT_UTILS) $(PROGS) test*.out keystat.??? example *.exe $(GITIGN)
 	rm -rf *.dSYM
