support OPTFLAGS which can be passed in with at build time

--- a/libut/Makefile
+++ b/libut/Makefile
@@ -7,6 +7,7 @@ LIBDIR=/usr/lib
 CFLAGS+=-I$(INCDIR)
 CFLAGS+=-Wall -Wextra -Werror -fPIC
 CFLAGS+=-g
+CFLAGS+=$(OPTFLAGS)
 
 libut.a: $(OBJS)
 	ar r $@ $^
