--- a/tests/Makefile
+++ b/tests/Makefile
@@ -122,5 +122,5 @@ astyle:
 .PHONY: clean astyle
 
 clean:
-	rm -f $(UTILS) $(PLAT_UTILS) $(PROGS) test*.out keystat.??? example hashscan sleep_test *.exe $(GITIGN)
+	rm -f $(UTILS) $(PLAT_UTILS) $(PROGS) test*.out keystat.??? example hashscan sleep_test *.exe $(GITIGN) *.diff
 	rm -rf *.dSYM
